--- a/mysql-router/env/mysql-router.env
+++ b/mysql-router/env/mysql-router.env
@@ -1,5 +1,5 @@
 MYSQL_USER=root
-MYSQL_HOST=mysql-server-1
+MYSQL_HOST=mysql-server-01
 MYSQL_PORT=3306
-MYSQL_PASSWORD=mysql
+MYSQL_PASSWORD=123456
 MYSQL_INNODB_NUM_MEMBERS=3
