--- a/mysql-shell/Dockerfile
+++ b/mysql-shell/Dockerfile
@@ -14,5 +14,5 @@ COPY entrypoint.sh /entrypoint.sh
 COPY setupCluster.js /setupCluster.js
 RUN chmod +x /entrypoint.sh /setupCluster.js
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["mysqlsh"]
+CMD ["mysqlsh", ";", "tail", "-f", "/dev/null"]
 
