--- a/mysql-shell/env/mysql-shell.env
+++ b/mysql-shell/env/mysql-shell.env
@@ -1,5 +1,5 @@
 MYSQL_USER=root
-MYSQL_HOST=mysql-server-01
+MYSQL_HOST=10.10.12.113
 MYSQL_PORT=3306
 MYSQL_PASSWORD=123456
 MYSQLSH_SCRIPT=/setupCluster.js
