--- a/mysql-router/env/mysql-router.env
+++ b/mysql-router/env/mysql-router.env
@@ -2,4 +2,4 @@ MYSQL_USER=root
 MYSQL_HOST=mysql-server-01
 MYSQL_PORT=3306
 MYSQL_PASSWORD=123456
-MYSQL_INNODB_NUM_MEMBERS=3
+# MYSQL_INNODB_NUM_MEMBERS=5
