update common environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         networks:
             - host
         env_file:
+            - common.env
             - ./mysql-server/env/mysql-server.env
         # volumes:
         #     - './mysql-server/data:/var/lib/mysql'
@@ -22,6 +23,7 @@ services:
         networks:
             - host
         env_file:
+            - common.env
             - ./mysql-server/env/mysql-server.env
         # volumes:
         #     - './mysql-server/data:/var/lib/mysql'
@@ -35,6 +37,7 @@ services:
         networks:
             - host
         env_file:
+            - common.env
             - ./mysql-server/env/mysql-server.env
         # volumes:
         #     - './mysql-server/data:/var/lib/mysql'
@@ -45,6 +48,7 @@ services:
         networks:
             - host
         env_file:
+            - common.env
             - ./mysql-shell/env/mysql-shell.env
         depends_on:
             - mysql-server-01
@@ -54,6 +58,7 @@ services:
         container_name: mysql-router
         build: ./mysql-router
         env_file:
+            - common.env
             - ./mysql-router/env/mysql-router.env
         networks:
             - host
